src/objects/Shopify_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Shopify integration related info</description>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Audience is to be used in token endpoint</description>
        <label>Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Base_URL__c</fullName>
        <description>Customer Base URL to be used on Customer screen as shopify URL</description>
        <label>Customer Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Time_Orders_Fetched_At__c</fullName>
        <label>Last Time Orders Fetched At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <description>Date when the Shopify was set up Blackpurl.</description>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>    
    <fields>
        <fullName>Order_Base_URL__c</fullName>
        <description>Order Base URL to be used on CO screen as shopify URL</description>
        <label>Order Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Polling_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Polling In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Base_URL__c</fullName>
        <description>Product Base URL to be used on part screen as shopify URL</description>
        <label>Product Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Sku_Mapping_Field__c</fullName>
        <label>Product Sku Mapping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reschedule_Interval__c</fullName>
        <inlineHelpText>Reschedule sync shopify batch in specified minutes</inlineHelpText>
        <label>Reschedule Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shop_Name__c</fullName>
        <description>Contains the shop name in format to use in integration-
For Ex:
If Shop Name = super shop blackpurl dev
Value = super-shop-blackpurl-dev.myshopify.com</description>
        <inlineHelpText>Contains the shop name in format to use in integration-
For Ex:
If Shop Name = super shop blackpurl dev
Value = super-shop-blackpurl-dev.myshopify.com</inlineHelpText>
        <label>Shop Name For Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Title__c</fullName>
        <label>Website Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>Shopify Configuration</label>
</CustomObject>